Closed
Bug 920446
Opened 12 years ago
Closed 12 years ago
Assertion failure: analyzedArgsUsage(), at ../jsscript.h:691
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: decoder, Assigned: bhackett1024)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update])
Attachments
(2 files)
|
1.03 KB,
text/plain
|
Details | |
|
934 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
The following testcase asserts on mozilla-central revision 68d279364a8b (run with --fuzzing-safe):
var g = newGlobal();
var dbg = new Debugger(g);
dbg.onNewScript = function(script) {
fscript = script.getChildScripts()[0];
}
g.eval("function f(x) { arguments[0] = 3; return x }");
fscript.setBreakpoint(0, {hit:function(frame) {
assertEq(frame.eval(("1null")).return, 1);
}});
assertEq(g.f(1), 42);
| Reporter | ||
Comment 1•12 years ago
|
||
| Reporter | ||
Updated•12 years ago
|
Whiteboard: [jsbugmon:update,bisect]
| Reporter | ||
Updated•12 years ago
|
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update]
| Reporter | ||
Comment 2•12 years ago
|
||
JSBugMon: Bisection requested, result:
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: http://hg.mozilla.org/mozilla-central/rev/4370f503d69f
user: Brian Hackett
date: Thu May 23 13:25:19 2013 -0600
summary: Bug 875276 - Don't profile types in scripts until they are compiled by baseline, r=jandem.
This iteration took 1.104 seconds to run.
Comment 3•12 years ago
|
||
Brian, is bug 875276 a likely regressor?
Blocks: 875276
status-firefox24:
--- → affected
status-firefox25:
--- → affected
status-firefox26:
--- → affected
status-firefox27:
--- → affected
status-firefox-esr17:
--- → unaffected
status-firefox-esr24:
--- → affected
Flags: needinfo?(bhackett1024)
Keywords: regression
| Assignee | ||
Comment 4•12 years ago
|
||
No, this is a preexisting issue.
Assignee: general → bhackett1024
Attachment #813529 -
Flags: review?(luke)
Flags: needinfo?(bhackett1024)
Comment 5•12 years ago
|
||
Comment on attachment 813529 [details] [diff] [review]
patch
Not a preexisting issue, though: before bug 875276, the script would have been analyzed before execution and thus before onPopCall.
Attachment #813529 -
Flags: review?(luke) → review+
| Assignee | ||
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•