Bug 920446 - Scripts might not yet have had their arguments usage analyzed when being popped in the interpreter, r=luke.